<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.SignUpActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/app_main_gradient"
        android:gravity="center_vertical|center_horizontal"
        android:orientation="vertical"
        android:padding="25dp">
        <TextView
            android:text="@string/str_instagram"
            android:textColor="@color/white"
            android:fontFamily="@font/custom_font"
            android:textSize="40sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <EditText
            android:id="@+id/et_fullname"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/view_rounded_corner"
            android:hint="@string/str_fullname"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:textColor="#ffffff"
            android:textColorHint="#90ffffff"
            android:textSize="16sp"
            android:autofillHints="name"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/view_rounded_corner"
            android:hint="@string/str_email"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:textColor="#ffffff"
            android:textColorHint="#90ffffff"
            android:textSize="16sp"
            android:autofillHints="emailAddress"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/view_rounded_corner"
            android:hint="@string/str_password"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:textColor="#ffffff"
            android:textColorHint="#90ffffff"
            android:textSize="16sp"
            android:autofillHints="password"
            android:inputType="textPassword" />
        <EditText
            android:id="@+id/et_cpassword"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/view_rounded_corner"
            android:hint="@string/str_cpassword"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:textColor="#ffffff"
            android:textColorHint="#90ffffff"
            android:textSize="16sp"
            android:autofillHints="password"
            android:inputType="textPassword" />
        <Button
            android:id="@+id/b_signup1"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/view_rounded_corner"
            android:text="@string/str_signup"
            android:textAllCaps="false"
            android:textColor="#ffffff"
            android:textSize="16sp"
            app:backgroundTint="@null" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="right|center_vertical"
            tools:ignore="RtlHardcoded">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_already_account"
                android:textColor="#ffffff"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tv_signin1"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:paddingLeft="10dp"
                android:text="@string/str_signin"
                android:textColor="#ffffff"
                android:textSize="17sp"
                android:textStyle="bold"
                tools:ignore="RtlSymmetry" />
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>